# CSE165-LabTools

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  app  appdebug  build-cmake.bat  build-cmake.sh  debug  install.sh  lab  lab_gen.sh  lab_tools  setup.sh
.github/workflows/: auto_release.yml  bleeding_edge.yml  c-cpp.yml  latest.yml  latest_dev.yml  mac.yml  main.yml
Lab12/14511/: t.cpp
LabTools/template/: t.cpp  t_std.cpp
inc/: file_gen.h  files.h  lab.h  lab_gen.h  sys_util.h  system_utils.h  term_util.h
inst/: LabTools
instdir/: LabTools
resource/: t.cpp  t_std.cpp  template.cpp  template_std.cpp
src/: app.cpp  file_gen.cpp  files.cpp  lab.cpp  lab_gen.cpp  lab_tools.cpp  main.cpp  sys_util.cpp  term_util.cpp
temp/: Makefile  install.sh
z_old/: lab_gen.sh
